# exosnap

./: .clang-format  .clang-tidy  .cppcheck-suppress  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KNOWN_LIMITATIONS.md  KNOWN_LIMITATIONS.txt  LICENSE  PRIVACY.md  README-PORTABLE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  manifest.json
app/: CMakeLists.txt  ExoSnapBuildInfo.h.in  GenerateBuildInfo.cmake  MainWindow.cpp  MainWindow.h  README.md  exosnap.rc  exosnap_resource.h  exosnap_version.rc.in  main.cpp  startup_log.cpp  startup_log.h
app/assets/brand/: exosnap_brand.qrc
app/assets/fonts/: exosnap_fonts.qrc
app/diagnostics/: CapabilitySummary.cpp  ConfigSummary.cpp  ConfigSummary.h  DiagnosticResult.cpp  DiagnosticResult.h  DiskSpaceProvider.cpp  DiskSpaceProvider.h  DiskSpaceThresholds.h  DpcLatencyProvider.cpp  DpcLatencyProvider.h  ElevationProvider.cpp  ElevationProvider.h  FilesystemProvider.cpp  FilesystemProvider.h  PresentModeMapping.cpp  PresentModeMapping.h  PresentMonEtwSession.cpp  PresentMonEtwSession.h  PresentMonProvider.cpp  PresentMonProvider.h  PresentProvider.h  RecommendationEngine.cpp  RecommendationEngine.h  SelfTestRunner.cpp  SelfTestRunner.h  StartupClock.h  error_message.cpp
app/models/: CompletedRecording.h  FilenameBuilder.h  MarkerSidecar.h  OutputPathValidator.h  OutputSettingsModel.cpp  OutputSettingsModel.h  RecordingPreset.cpp  RecordingPreset.h  RecordingPresetRegistry.cpp  RecordingPresetRegistry.h  SettingsCompareData.cpp  SettingsCompareData.h  SettingsHintText.h  VideoSettingsModel.h
app/notifications/: NotificationEvent.h  NotificationManager.cpp  NotificationManager.h
app/pages/: AboutPage.cpp  AboutPage.h  AdvancedPage.cpp  AdvancedPage.h  ConfigPage.cpp  ConfigPage.h  DiagnosticsPage.cpp  DiagnosticsPage.h  EditExportPage.cpp  EditExportPage.h  HotkeysPage.cpp  HotkeysPage.h  LogsPage.cpp  LogsPage.h  OutputPage.cpp  RecordPage.cpp  RecordPage.h  VideoPage.cpp  VideoPage.h  WebcamPage.cpp  WebcamPage.h
app/services/: AudioDeviceNotifier.cpp  AudioDeviceNotifier.h  CrashIssueReport.cpp  CrashIssueReport.h  DisplayDeviceNotifier.cpp  DxgiPreviewRenderer.cpp  ElevatedRelaunch.cpp  ElevatedRelaunch.h  GlobalHotkeyService.h  PreviewService.h  RecordingCoordinator.cpp  RecordingCoordinator.h  RecordingCountdownController.h  RecoveryService.cpp  RecoveryService.h  ThumbnailCapture.cpp  UpdateService.cpp  UpdateService.h  WebcamService.cpp  WebcamService.h
app/settings/: AppSettingsStore.cpp  AppSettingsStore.h  ConfigPaths.h  RecordingHistoryStore.cpp  RecordingHistoryStore.h  RecordingPresetStore.cpp  RecordingPresetStore.h  RecoveryManifestStore.cpp  RecoveryManifestStore.h
app/tests/: crash_update_visual_proof.cpp  overlay_visual_proof.cpp  recording_error_visual_proof.cpp  test_about_overlay.cpp  test_accent_theme.cpp  test_advisory_item.cpp  test_app_settings_store.cpp  test_audio_encoding_preset.cpp  test_audio_gain_preset.cpp  test_audio_row_gain_handlers.cpp  test_capture_frame_button.cpp  test_codec_labels.cpp  test_compare_hint.cpp  test_config_page.cpp  test_corner_capture_button.cpp  test_countdown_overlay.cpp  test_crash_issue_report.cpp  test_crash_report_overlay.cpp  test_device_selection_policy.cpp  test_diagnostics.cpp  test_diagnostics_overlay.cpp  test_diagnostics_page.cpp  test_edit_context.cpp  test_edit_export_page.cpp  test_elevation.cpp  test_error_message.cpp  test_exo_spin_box.cpp  test_filesystem_checks.cpp  test_global_hotkey_service.cpp  test_hotkeys_page.cpp  test_info_hint_icon.cpp  test_info_hints_config.cpp  test_key_cap.cpp  test_logs_page.cpp  test_low_disk_guard.cpp  test_lucide_icon.cpp  test_mp4_split_remux.cpp  test_notification_bell.cpp  test_notification_hub_panel.cpp  test_notification_manager.cpp  (+32 more)
app/ui/: CodecLabels.h
app/ui/brand/: BrandMarkWidget.cpp
app/ui/chrome/: NotificationHubPanel.cpp  NotificationHubPanel.h  OperationalTitleBar.cpp  OperationalTitleBar.h  RecordingStatusGuards.h
app/ui/dialogs/: AboutOverlay.cpp  AboutOverlay.h  CrashReportOverlay.cpp  CrashReportOverlay.h  CrashReportPanel.cpp  CrashReportPanel.h  PresetManageOverlay.cpp  PresetManageOverlay.h  RecordingErrorOverlay.cpp  RecordingErrorOverlay.h  RecordingErrorPanel.cpp  RecordingErrorPanel.h  RecoveryOverlay.cpp  RecoveryOverlay.h  SourcePickerDialog.h  SourcePickerOverlay.cpp  SourcePickerPanel.cpp  SourcePickerPanel.h  UpdateSettingsPanel.cpp  UpdateSettingsPanel.h
app/ui/overlay/: CountdownOverlayWindow.cpp  CountdownOverlayWindow.h  DiagnosticsOverlayWindow.cpp  DiagnosticsOverlayWindow.h  NotificationToastWindow.cpp  NotificationToastWindow.h  QuickControlPillWindow.cpp  QuickControlPillWindow.h  RecordingOverlayWindow.cpp  RecordingOverlayWindow.h
app/ui/theme/: ExoSnapAccents.h  ExoSnapMetrics.h  ExoSnapPalette.h  ExoSnapTheme.cpp  ExoSnapTheme.h  ExoSnapThemes.h  LucideIcon.cpp  LucideIcon.h  exosnap_dark.qss  exosnap_theme.qrc
app/ui/tray/: TrayPresence.cpp  TrayPresence.h
app/ui/widgets/: AdvisoryItem.cpp  AdvisoryItem.h  AudioSourceRow.cpp  AudioSourceRow.h  AudioSourceToggle.cpp  CameraPreview.cpp  CaptureTargetCard.cpp  CaptureTargetCard.h  (+47 more)
app/viewmodels/: PresentationStateBuilder.h  RecordViewModel.cpp  RecordViewModel.h
app/visual_tests/: VisualScenario.cpp  VisualScenario.h  VisualTestHarness.cpp  VisualTestHarness.h
apps/exosnap/: CMakeLists.txt  GenerateBuildInfo.cmake  MainWindow.cpp  MainWindow.h  README.md  exosnap.rc  exosnap_resource.h  main.cpp
apps/probes/: CMakeLists.txt
apps/recorder_app/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  README.md  XamlGeneratedCompat.cpp  XamlTypeInfoIncludes.h  main.cpp  recorder_app.vcxproj  recorder_app.vcxproj.filters  startup_log.cpp  startup_log.h
libs/capability/: CMakeLists.txt
libs/crash_capture/: CMakeLists.txt
libs/recorder_core/: CMakeLists.txt
libs/update/: CMakeLists.txt
tools/probes/: CMakeLists.txt  README.md
(+672 files in other folders)
